<resources>
    <string name="app_name">Tugas_3</string>
    <string name="logo_text">Aplikasiku</string>
    <string name="sign_in">Sign In</string>
    <string name="success">Successful!</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="get_started">Get Started</string>
    <string name="log_in">Log In</string>
    <string name="reset_code">Reset Code</string>
    <string name="enter_your_reset_code">Enter Your Number</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send_request">Send Request</string>
    <string name="change_password">Change Password</string>
    <string name="emailname">pangcheo1210@gmail.com</string>
    <string name="pleaseenter">Please enter your email below to receive</string>
    <string name="below">your password reset instructions</string>
    <string name="reset_password">Reset Password</string>
    <string name="wassent">Reset code was sent to your email. Please</string>
    <string name="enterthecode">enter the code and create new password</string>
    <string name="enter_your__confirm_password">Enter Your Confirm Password</string>
</resources>